--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,12 @@
 .container {
     width: 100%;
     margin: 20vh auto;
+    h1{
+        text-align: center;
+        font-size: 50px;
+        font-weight: 700;
+        text-transform: uppercase;
+    }
 }
 
 .mainDiv {
